# Karla

./: CLAUDE.md  README.md  pyproject.toml
docs/: FEATURES.md
docs/poc/: indian_venues_analysis.md  indian_venues_sample.csv  phil_memo_venues_poc.md  salt_proposal.md
src/karla/: __init__.py  cli.py  jobs.py
